dicription&button complite

--- a/style.css
+++ b/style.css
@@ -39,4 +39,51 @@ font-size: small;
 .photoBox{
     height: 500px;
     width: 100%;
+    background-color: black;
+    position: relative;
+}
+.photoBox img{
+    width: 100%;
+    height: 100%;
+    
+}
+.contents{
+    height: 300px;
+    width: 500px;
+    position: absolute;
+    margin-left: 5%;
+    margin-top: 9%;
+}
+.details
+{
+    width: 100;
+    height: 180px;
+    color: white;
+    
+}
+.button{
+    gap:5%;
+    display: flex;
+}
+.watch{
+background-color: rgb(255, 10, 10);    
+color: white;
+border: none;
+height:30px;
+width: 90px;
+border-radius: 45px;
+box-shadow: rgb(255, 10, 10) 0px 5px 15px;
+
+}
+.addList{
+    color: white;
+    background-color: rgb(30, 18, 18);
+    border: none;
+    height: 30px;
+    width: 90px;
+    border-radius: 35px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+h2{
+    font-size:50px;
 }
