--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
 padding: 0;
 }
+/* body{width: 100vh;} */
 .navBar{
     height: 80px;
     width: 100%;
@@ -38,7 +39,7 @@ font-size: small;
 }
 .photoBox{
     height: 450px;
-    width: 100%;
+    width: 100vw;
     background-color: black;
     position: relative;
 }
@@ -49,9 +50,9 @@ font-size: small;
 }
 .contents{
     height: 300px;
-    width: 500px;
+    width: 50%;
     position: absolute;
-    margin-left: 5%;
+    margin-left: 4%;
     margin-top: 9%;
 }
 .details
@@ -89,8 +90,8 @@ h2{
 }
 .thirdBox{
     height: 120px;
-    width: 90%;
-    margin: auto;
+    width: 100%;
+   
     background-color: rgb(26, 25, 25);
     
 }
@@ -110,7 +111,7 @@ h2{
  gap: 4%;
     display: flex;
     align-items: center;
-    margin-left: 5%;
+   justify-content: space-around;
 }
 .watch1{
     background-color: rgb(255, 10, 10);
@@ -128,3 +129,28 @@ border-radius: 45px;
 .trends p{
     color: gray;
 }
+.last{
+   gap: 30px;
+    height: 200px;
+    display: flex;
+    justify-content:space-around ;
+    overflow-x: auto;
+    overflow-y: hidden;
+   
+}
+.last::-webkit-scrollbar{
+    display: none;
+}
+.suggections{
+    height: 180px;
+    width: 135px;
+    min-width: 150px;
+
+}
+.suggections img{
+    width: 100%;
+    height: 100%;
+    align-items: center ;
+}
+
+
