--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ font-size: small;
 .photoBox{
     height: 450px;
     width: 100vw;
-    background-color: black;
     position: relative;
 }
 .photoBox img{
@@ -53,7 +52,7 @@ font-size: small;
     width: 50%;
     position: absolute;
     margin-left: 4%;
-    margin-top: 9%;
+    margin-top: 5%;
 }
 .details
 {
@@ -89,7 +88,7 @@ h2{
     font-size:50px;
 }
 .thirdBox{
-    height: 120px;
+    height: 150px;
     width: 100%;
    
     background-color: rgb(26, 25, 25);
@@ -106,14 +105,16 @@ h2{
    
 }
 .categories{
-    height: 60px;
+    height: 80px;
     width: 90%;
- gap: 40%;
+ gap: 10%;
     display: flex;
     align-items: center;
    justify-content: space-around;
    overflow-x: auto;
    overflow-y: hidden;
+   margin-left: 5%;
+   
 }
 .categories::-webkit-scrollbar{
     display: none;
@@ -122,8 +123,8 @@ h2{
     background-color: rgb(255, 10, 10);
 color: white;
 border: none;
-height:30px;
-width: 90px;
+height:35px;
+width: 110px;
 border-radius: 45px;
 }
 
@@ -141,6 +142,7 @@ border-radius: 45px;
     justify-content:space-around ;
     overflow-x: auto;
     overflow-y: hidden;
+    background-color:rgb(26, 25, 25);
    
 }
 .last::-webkit-scrollbar{
@@ -157,5 +159,32 @@ border-radius: 45px;
     height: 100%;
     align-items: center ;
 }
+@media only screen and (max-width: 800px) {
+    .button {
+        margin-top: 140px;
+    }
+  }
+  
+@media only screen and (max-width: 800px) {
+    .watch {
+        background-color: rgb(9, 49, 210);
+        box-shadow: rgb(9, 49, 210) 0px 10px 36px 0px, rgb(9, 49, 210) 0px 0px 0px 1px;
+    }
+  }
 
+@media only screen and (max-width: 800px) {
+    .last{
+        background-color: rgb(0, 0, 0);
+    }
+}
+@media only screen and (max-width: 800px) {
+    .watch1 {
+        background-color: rgb(9, 49, 210);
+    }
+  }
 
+  @media only screen and (max-width: 800px) {
+    .addList{
+        background-color: rgb(241, 12, 12);
+    }
+}
